--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "license": "GPL",
   "devDependencies": {
     "@total-typescript/exercise-cli": "^0.5.1",
-    "@types/node": "^18.6.5",
-    "@types/react": "^18.0.27",
-    "cross-fetch": "^3.1.5",
-    "jsdom": "^21.1.1",
-    "prettier": "^2.8.7",
+    "@total-typescript/helpers": "^0.0.1",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "cross-fetch": "^4.0.0",
+    "jsdom": "^23.0.1",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3",
-    "vite-tsconfig-paths": "^4.0.7",
-    "vitest": "^1.0.2"
+    "vite-tsconfig-paths": "^4.2.2",
+    "vitest": "^1.0.4"
   },
   "scripts": {
     "exercise": "tt-cli run",
